# gua

./: .gitignore  AGENTS.md  Cargo.toml  DEVELOPER.md  Gua_D2D_Plan.md  Gua内存管理最终方案.md  HarmonyOS_Design_Guide.md  LICENSE  MANUAL.md  README.md  TODO.md  build.rs  config.toml  context.md  gui.rc  review.md  textinput-实现报告.md  已知问题.md  待修复.md
plugins/vd-hotkeys/: Cargo.toml
plugins/vd-hotkeys/src/: lib.rs
sdk/gua-sdk/: Cargo.toml
sdk/gua-sdk/include/: gua-api.h
sdk/gua-sdk/src/: lib.rs
src/: config.rs  draw.rs  executor.rs  main.rs  plugin.rs  settings.rs  state.rs  theme.rs  tray.rs  widget.rs  window.rs  wndproc.rs
