[package]
name = "gua"
version = "0.1.0"
edition = "2021"

[dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_System_LibraryLoader",
] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = "z"
