[package]
name = "gua"
version = "0.1.4"
edition = "2021"

[build-dependencies]
embed-resource = "2.5"

[dependencies]
pinyin = { version = "0.11", default-features = false, features = ["plain"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_GdiPlus",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = "z"
