[package]
name = "gua"
version = "0.2.1"
edition = "2021"

[build-dependencies]
embed-resource = "2.5"

[dependencies]
pinyin = { version = "0.11", default-features = false, features = ["plain"] }
windows-numerics = "0.3.1"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct2D",
    "Win32_Graphics_Direct2D_Common",
    "Win32_Graphics_DirectWrite",
    "Win32_Graphics_DirectComposition",
    "Win32_System_Com",
    "Win32_System_LibraryLoader",
    "Win32_System_Threading",
    "Win32_Security",
] }

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = "z"

[workspace]
